# mission8

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  software-build  software-killall  software-run  software-run-no-controller  temp
doc/: .gitignore  CMakeLists.txt  Doxyfile.in  run_instructions.md
doc/img/: hlsys.dot
drivers/: CMakeLists.txt  maav-camera.cpp  maav-control-input.cpp  maav-controller.cpp  maav-depth-to-point-cloud.cpp  maav-estimator.cpp  maav-goal-input.cpp  maav-guidance.cpp  maav-imu.cpp  maav-killswitch.cpp  maav-localizer.cpp  maav-obstacle-avoider.cpp  maav-obstacle-test.cpp  maav-octomap.cpp  maav-planefit.cpp  maav-state-forward.cpp  main.cpp  read-thrust.cpp  tanfan.cpp
examples/: CMakeLists.txt
examples/gnc/: CMakeLists.txt
examples/gnc/tums/: main.cpp
examples/manual/: main.cpp
qualisys/: CMakeLists.txt  README.md
qualisys/config/: qualisys-config.yaml
qualisys/include/: KalmanFilter.hpp  Publisher.hpp  QualisysEstimator.hpp  QualisysZCM.hpp  State.hpp  Subscriber.hpp
qualisys/src/: KalmanFilter.cpp  QualisysEstimator.cpp  QualisysZCM.cpp  State.cpp  maav-q2z-forwarder.cpp  maav-qualisys.cpp
sim/: CMakeLists.txt  runsim.sh
sim/models/3dm-gx3-25/: 3dm-gx3-25.sdf  model.config
sim/models/d435/: D435.sdf  model.config
sim/models/iarc_arena/: iarc_arena.sdf  model.config
sim/models/lidar_lite/: LidarLite.sdf  model.config
sim/models/maav_iris/: maav_iris.sdf  model.config
sim/models/maav_matrice/: maav_matrice.sdf  model.config
sim/models/t265/: T265.sdf  model.config
sim/plugins/: MaavCameraPlugin.cpp  MaavClientPlugin.cpp  MaavImuPlugin.cpp  MaavImuPlugin.hpp  MaavLidarPlugin.cpp  MaavPlaneFitPlugin.cpp  MaavPlanefitPlugin.cpp  MaavVehiclePlugin.cpp  RealSensePlugin.cpp  RealSensePlugin.hpp  RealsenseT265Plugin.cpp  SensorRegisterPlugin.cpp  common.hpp  ground_truth_plugin.cpp  hello_world.cpp  zcm_publisher.cpp
sim/sensors/: PlaneFitSensor.cpp  PlaneFitSensor.hpp  PlaneFitSensorPrivate.hpp  SlamSensor.cpp  SlamSensor.hpp  SlamSensorPrivate.hpp
sim/worlds/: astar-building.world  astar-obstacles.world  camera_intrinsics.world  fxb.world  maav-test-nonzero.world  maav-test.world  test.world
src/: CMakeLists.txt  constants.hpp  controller.cpp  estimator.cpp  gnc.cpp  localizer.cpp  planner.cpp
src/common/: CMakeLists.txt
src/common/math/: CMakeLists.txt  FORMapper.cpp  FieldOfView.cpp  LowPass.cpp  angle_functions.cpp  math.cpp  math_utils.cpp
src/common/mavlink/: AutopilotInterface.cpp  CMakeLists.txt  CommunicationPort.cpp  OffboardControl.cpp  SerialPort.cpp  communication_port.cpp  offboard_control.cpp
src/common/messages/: CMakeLists.txt  MsgChannels.cpp
src/common/utils/: CMakeLists.txt  GetOpt.cpp  Log.cpp  MsgValidator.cpp  SerialTTY.cpp  TimeSync.cpp  Tracker.cpp  ZCMHandler.cpp  debug.cpp  getopt.c  zarray.c  zhash.c
src/control/: CMakeLists.txt
src/gcs/: CMakeLists.txt  CommandFrame.cpp  GCS.cpp  GCSConsts.cpp  GlibZCM.cpp  StatusFrame.cpp  TuningFrame.cpp  XboxController.cpp  fake-ctrl.cpp  maav-gcs.cpp
src/gcs-client/: CMakeLists.txt  maav-gcs-client.cpp
src/gnc/: CMakeLists.txt  Controller.cpp  Estimator.cpp  Localizer.cpp  OccupancyMap.cpp  Planner.cpp  PointMapper.cpp  State.cpp  controller.cpp  estimator.cpp  localizer.cpp  planner.cpp
src/gnc/control/: CMakeLists.txt  ContinuousPath.cpp  Controller.cpp  LandDetector.cpp  LinearlyInterpolatedPath.cpp  Pid.cpp  StateMachine.cpp  pid.cpp
src/gnc/kalman/: CMakeLists.txt  Extrinsics.cpp  History.cpp  Prediction.cpp  history.cpp  kalman_state.cpp  prediction.cpp  unscented_transform.cpp
src/gnc/measurements/: CMakeLists.txt  Lidar.cpp  (+5 more)
src/imu/: CMakeLists.txt  Microstrain.cpp
src/kalman/: CMakeLists.txt  history.cpp  kalman_state.cpp  kalman_state.hpp
src/lidar/: CMakeLists.txt  LaserReader.cpp
src/measurements/: CMakeLists.txt  GlobalUpdate.hpp  Imu.hpp  Lidar.hpp  Measurement.hpp  PlaneFit.hpp  VisualOdometry.hpp
src/obstacles/: CMakeLists.txt  ObstacleDetector.cpp  lidar-viewer.cpp  maav-obstacle.cpp
src/slam/: CMakeLists.txt  Converter.h  Frame.cc  Frame.h  FrameDrawer.cc  FrameDrawer.h  Initializer.cc  Initializer.h  KeyFrameDatabase.cc  LoopClosing.cc  LoopClosing.h  Map.cc  Map.h  MapPoint.cc  ORBVocabulary.h  ORBextractor.cc  ORBmatcher.cc  ORBmatcher.h  Optimizer.cc  Optimizer.h  PnPsolver.h  Sim3Solver.cc  System.cc  System.h  Tracking.cc
src/state/: CMakeLists.txt  base_state.cpp  base_state.hpp
src/tanfan/: CMakeLists.txt  lcmlite.cpp  tanfan.cpp
src/vision/: CMakeLists.txt
tests/gnc/: CMakeLists.txt  GlobalUpdateTest.cpp  HistoryTest.cpp  LidarTest.cpp  MagnetometerTest.cpp  PidTest.cpp  PlaneFitTest.cpp  PlannerUtilsTest.cpp  PredictionTest.cpp  StateTest.cpp  UnscentedTransformTest.cpp  ZcmConversionTest.cpp  history_test.cpp  lidar_test.cpp  pid_res.out  pid_test.cpp  planefit_test.cpp  planner_test.cpp  prediction_test.cpp  state_test.cpp  test_helpers.cpp  tests.cbp  unscented_transform_test.cpp
tools/localization_viz/: CMakeLists.txt  FrameDrawer.cpp  FrameDrawer.hpp  MapDrawer.cpp  MapDrawer.hpp  Viewer.cpp  Viewer.hpp  Visualizer.cpp
tools/octomap/: CMakeLists.txt  publish-saved-octomap.cpp  save-octomap.cpp
tools/octomap_viz/: CMakeLists.txt  Visualizer.cpp
tools/planner/: CMakeLists.txt  createOctomap.cpp  visualizePlanner.cpp
tools/plotter/: AbstractData.cpp  AbstractData.hpp  CMakeLists.txt  DataDict.cpp  DataDict.hpp  DataDict_generated.1.cpp  DataDict_generated.cpp  FlightInstruments.cpp  FlightInstruments.hpp  FlightInstrumentsWindow.cpp  FlightInstrumentsWindow.hpp  GaussianData.cpp  GaussianData.hpp  LinePlotWindow.cpp  LinePlotWindow.h  LinePlotWindow.ui  ListWindow.cpp  ListWindow.h  ListWindow.ui  ListWindow_generated.cpp  MatrixData.cpp  MatrixData.hpp  Plotter.cpp  QuaternionData.cpp  QuaternionData.hpp  ZcmConversion.cpp  ZcmConversion.hpp  ZcmLoop.cpp  ZcmLoop.hpp  ZcmLoop_generated.1.cpp  ZcmLoop_generated.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  plots.pro  plotter.cpp  qcustomplot.h  qtplotter.pro  zcm_generate_plotter.py
(+545 files in other folders)
